changes made to the website

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
     // --- Model and Class Configuration ---
     const modelPath = './best.onnx'; // Make sure best.onnx is in the same folder
     const modelInputShape = [1, 3, 640, 640];
-    const classes = ['EmergencyPhone', 'FireAlarm', 'FireExtinguisher', 'FirstAidBox', 'NitrogenTank', 'OxygenTank', 'SafetySwitchPanel'];
+    const classes = ['OxygenTank', 'NitrogenTank', 'FirstAidBox', 'FireAlarm', 'SafetySwitchPanel', 'EmergencyPhone', 'FireExtinguisher'];
     const COLORS = {
         'OxygenTank': '#34D399', 'NitrogenTank': '#F87171', 'FirstAidBox': '#60A5FA',
         'FireAlarm': '#FBBF24', 'SafetySwitchPanel': '#A78BFA', 'EmergencyPhone': '#F472B6',
